--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  postgres: ^2.5.4
+
+  
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
