--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -34,8 +34,7 @@ dependencies:
   postgres: ^2.5.4
   percent_indicator: ^4.0.1
   intl: ^0.18.1
-  
-
+  flutter_riverpod: ^2.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
