Made the database work. Implemented a working login with email and password verification

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "D:/fitness/flutter/windows"
+    "cmake.sourceDirectory": "D:/fitness/flutter/windows",
+    "cmake.ignoreCMakeListsMissing": true
 }
