--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -64,6 +64,8 @@ flutter:
 
   assets:
     - assets/Logo.png
+    - assets/shark.png
+    - assets/fish.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
