- Fully functioning registration - Removed providers and changed querys to return maps - Fixed errors in the database - Added exercises from exercise list spreadsheet - Added viewworkout button functionality, but UI needs workout - Added logout function - Organised queries

--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -66,6 +66,8 @@ flutter:
     - assets/Logo.png
     - assets/shark.png
     - assets/fish.png
+    - assets/crab.png
+    - assets/dolphin.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
